--- a/_sass/base/_utils.scss
+++ b/_sass/base/_utils.scss
@@ -18,3 +18,16 @@
 .u-pull-left {
   float: left;
 }
+
+.center-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.u-full-height {
+    height: 100%;
+    box-sizing: border-box;
+}
