--- a/_sass/modules/_lists.scss
+++ b/_sass/modules/_lists.scss
@@ -2,15 +2,15 @@
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
 ul {
-  list-style: disc inside;
-    margin-left: 2em;
+  list-style: disc outside;
+    margin-left: 2rem;
 }
 
 ol {
-  list-style: decimal inside;
-  padding-left: 0;
+  list-style: decimal outside;
+  padding-left: 0em;
   margin-top: 0;
-    margin-left: 2em;
+  margin-left: 2rem;
 }
 
 ul {
@@ -34,7 +34,7 @@ li {
 }
 
 ul.special-list  {
-  list-style: none inside;
+  list-style: none outside;
   text-indent: -1em;
   padding-left: 1em; }
 
