--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header class="gradient">
-        <div class="logo container"><a href="index.html"><h1 class="header">{{ site.title }}</h1></a></div>
+        <div class="logo"><a href="{{ site.baseurl}}/index.html"><img src="https://live.staticflickr.com/65535/49239589368_d93b730196.jpg" height="100%"><h1 class="hidden">{{ site.title }}</h1></a></div>
 </header>
 
