--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,12 +3,11 @@ layout: default
 ---
 <article class="post">
 
-  <header class="">
+    <div class="center-content">
     <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="container">
-    {{ content }}
-  </div>
+    </div>
+    <div class="container extra-padding">
+        {{ content }}
+    </div>
 
 </article>
