--- a/_sass/modules/_cards.scss
+++ b/_sass/modules/_cards.scss
@@ -20,17 +20,42 @@
     background: rgba(240,240,240,1);
     padding: 1em;
     margin: 0.5em;
-    box-shadow: 0px 1em 1em 0px rgba(0,0,0,0.2); 
+    box-shadow: 0px 1em 1em 0px rgba(0,0,0,0.1); 
 }
 
 .cards:first-of-type {
-    max-width: 100%;
-    width: 100%;
-    border-left: 2em solid $primary-color;
+
 }
 
 .cards:hover {
     background: #fff;
     box-shadow: 0px 1em 2em 0.5em rgba(0,0,0,0.2); 
     transition: .3s ease-out;
+}
+
+.first {
+    max-width: 100%;
+    width: 100%;
+    border-bottom: 1em solid $primary-color;
+    background: $secondary-color;
+    color: #fff;
+}
+
+.first a {
+    color: #fff !important;
+}
+
+.first a:hover {
+    color: $primary-color !important;
+}
+
+.first h2 {
+    margin-right: -.4em;
+}
+
+.first:hover {
+    max-width: 100%;
+    width: 100%;
+    background: darken($secondary-color, 10%) ;
+    color: #fff;
 }
