updated header art

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 <header class="gradient">
-        <div class="logo"><a href="{{ site.baseurl}}/index.html"><img src="https://via.placeholder.com/3000" height="100%"><h1 class="hidden">{{ site.title }}</h1></a></div>
+        <div class="logo"><a href="{{ site.baseurl}}/index.html"><img src="https://drive.google.com/file/d/1CqgRAH9n97aD7gY6BRBwoe9Mdbaz1jnP/view?usp=sharing" height="100%"><h1 class="hidden">{{ site.title }}</h1></a></div>
 </header>
